# meshtaichi_patcher

./: .gitignore  CMakeLists.txt  readme.md
meshtaichi_patcher/: __init__.py
scripts/: build_vs2022_debug.bat  install_with_uv.bat
src/: cluster.cpp  main.cpp  mesh.cpp  patcher_old.cpp
